--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -7,7 +7,7 @@
     <h1>TravelBook</h1>
 
   </div>
-  <trips-menu [style.right]="isOpenMenu ? '0%' : '-100%'" [menuOptions]="menuOptions"></trips-menu>
+  <trips-menu [style.top]="isOpenMenu ? '12dvh' : '-100dvh'" [menuOptions]="menuOptions"></trips-menu>
   <img src="../../../assets/incons/menuBurguer.png" class="burguer-icon" (click)="changeStateMenu()" alt="Boton menu"
     role="button" aria-label="button">
 </header>
