--- a/src/app/core/menu/menu.component.html
+++ b/src/app/core/menu/menu.component.html
@@ -6,8 +6,8 @@
       <a (click)="changeStateMenu()" [routerLink]="item.path">{{item.label}}</a>
     </li>
     <li>
-      <span role="button" *ngIf="!currentUser$.token" (click)="handleLogin()">Login</span>
-      <span role="button" *ngIf="currentUser$.token" (click)="handleLogout()">Logout</span>
+      <a *ngIf="!currentUser$.token" (click)="handleLogin()">Login</a>
+      <a *ngIf="currentUser$.token" (click)="handleLogout()">Logout</a>
     </li>
   </ul>
 </nav>
