--- a/src/app/core/footer/footer.component.scss
+++ b/src/app/core/footer/footer.component.scss
@@ -9,7 +9,7 @@ footer {
   align-items: center;
   background-image: linear-gradient(135deg, #5dade2 10%, #d6eaf8 100%);
   width: 100%;
-  height: 3rem;
+  height: 5dvh;
   color: black;
   padding: 1rem;
 
