--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -13,6 +13,7 @@ header {
 
     img {
       transform: scale(0.8);
+      cursor: pointer;
     }
   }
 
@@ -36,6 +37,7 @@ header {
     width: 40px;
     height: 40px;
     margin-inline: 10px;
+    cursor: pointer;
   }
 }
 
