--- a/src/app/core/menu/menu.component.scss
+++ b/src/app/core/menu/menu.component.scss
@@ -1,6 +1,7 @@
 :host {
-  position: fixed;
-  top: 12dvh;
+  position: absolute;
+  // top: 12dvh;
+  right: 0;
   transition: all 0.5s ease-in-out;
 }
 
@@ -20,7 +21,7 @@
     gap: 1.2rem;
     padding: 1rem;
     height: 70vh;
-    width: 50vw;
+    // width: 50vw;
   }
 
   li {
@@ -30,16 +31,7 @@
     font-size: 1rem;
     a {
       all: unset;
+      cursor: pointer;
     }
   }
 }
-
-// .hidden {
-//   position: absolute;
-//   // right: -100%;
-//   top: 100%;
-//   display: flex;
-//   opacity: 1;
-//   background-color: white;
-//   font-size: 1.5em;
-// }
