--- a/src/app/trips/card/card.component.scss
+++ b/src/app/trips/card/card.component.scss
@@ -1,18 +1,22 @@
 a {
   all: unset;
 }
-
+:host {
+  width: 250px;
+}
 .container-card {
-  width: 100%;
+  width: 250px;
   align-items: center;
   display: flex;
   flex-direction: column;
   gap: 2px;
   background-color: rgba(255, 255, 255, 0.616);
   border-radius: 25px;
-  // padding: 2px;
   overflow: hidden;
 
+  a {
+    cursor: pointer;
+  }
   span {
     font-weight: 600;
   }
@@ -31,8 +35,6 @@ a {
       img {
         height: auto;
         width: 100%;
-        // padding: 1rem;
-        // border-radius: 25px 25px 0 0;
         flex-shrink: 0;
         background-size: cover;
         scroll-snap-align: center;
@@ -41,7 +43,7 @@ a {
     }
 
     section::-webkit-scrollbar {
-      height: 0.2rem;
+      height: 0.5rem;
       background-color: #f0fbfa;
     }
 
@@ -54,7 +56,6 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 70vw;
     padding: 1rem;
     gap: 16px;
     div {
@@ -101,11 +102,9 @@ a {
     div {
       display: flex;
       gap: 1rem;
+      span {
+        cursor: pointer;
+      }
     }
   }
-}
-
-.gallery:hover {
-  transform: scale(1.5);
-  scroll-snap-type: none;
 }
