--- a/src/app/trips/form.travel/form.travel.component.scss
+++ b/src/app/trips/form.travel/form.travel.component.scss
@@ -4,6 +4,10 @@
   gap: 1.5rem;
   align-items: center;
   width: 100%;
+
+  label {
+    cursor: pointer;
+  }
   button {
     margin: 1rem;
     padding: 10px 0;
@@ -53,7 +57,7 @@
     }
   }
 
-  .container-activities {
+  .container-activity {
     display: flex;
     flex-direction: column;
 
@@ -75,34 +79,39 @@
   .container-details {
     height: 60%;
     width: 100%;
-    overflow-y: scroll;
     display: flex;
     flex-direction: column;
-
     gap: 1rem;
 
     .details-activities {
       display: flex;
       flex-direction: column;
-      align-items: center;
       gap: 0.5rem;
       width: 100%;
-
-      summary {
-        text-align: center;
-      }
+      padding-inline: 1rem;
     }
 
     span {
       font-size: 1em;
       font-weight: 600;
-      padding: 1rem;
     }
     summary {
+      cursor: pointer;
+      padding: 1rem;
       font-size: 1.5em;
       font-weight: bolder;
     }
   }
+
+  .container-details::-webkit-scrollbar {
+    height: 0.5rem;
+    background-color: #f0fbfa;
+  }
+
+  .container-details::-webkit-scrollbar-thumb {
+    background: #91d7f2;
+  }
+
   .hidden {
     display: none;
   }
