--- a/src/app/trips/list.trips/list.trips.component.scss
+++ b/src/app/trips/list.trips/list.trips.component.scss
@@ -7,7 +7,7 @@
   padding: 2rem 0;
 
   .trips-container {
-    width: 100%;
+    width: 250px;
   }
 
   .container-paginator {
@@ -22,6 +22,7 @@
       font-size: 2em;
       width: 1.5rem;
       height: 1.5rem;
+      cursor: pointer;
     }
     span {
       display: flex;
@@ -50,6 +51,7 @@
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
+    width: 250px;
     li {
       list-style: none;
     }
