--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,15 +10,20 @@
   font-family: "Poppins", sans-serif;
 }
 
-body,
 html {
-  width: 100%;
-  min-height: 100dvh;
+  display: flex;
+  align-items: center;
   color: black;
   display: flex;
   flex-direction: column;
   font-family: "Poppins", sans-serif;
   // overflow-x: hidden;
+}
+
+body {
+  min-width: 375px;
+  width: 420px;
+  max-width: 420px;
 }
 
 button {
@@ -27,11 +32,12 @@ button {
   border-radius: 5px;
   padding: 3px;
   border: none;
+  cursor: pointer;
 }
 
 input {
-  border: none;
-  padding: 7px;
+  padding: 5px;
+  border-radius: 5px;
 }
 
 div {
@@ -40,9 +46,4 @@ div {
 
 button:disabled {
   opacity: 0.5;
-}
-
-input {
-  padding: 5px;
-  border-radius: 5px;
 }
