--- a/src/app/trips/details/details.component.html
+++ b/src/app/trips/details/details.component.html
@@ -1,4 +1,5 @@
-<ng-container *ngIf="travel.days">
+<mat-spinner *ngIf="stateTravel === 'loading'" class="spinner"></mat-spinner>
+<ng-container *ngIf="travel.days && stateTravel === 'loaded'">
   <div class="container-paginator">
     <button [disabled]="currentDay===0" (click)="handlePreviousPage()">←</button>
     <span>Dia {{currentDay+1}} de {{travel.days.length}}</span>
