--- a/src/app/trips/details/details.component.scss
+++ b/src/app/trips/details/details.component.scss
@@ -1,6 +1,7 @@
 :host {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   gap: 1.5rem;
   align-items: center;
   width: 100%;
